CR-2006-11-22-0: Bugfix:    fixed consumable_resources test
                 Review:    RD

RD-2006-11-20-0: Bugfix:    fixed some issues introduced by resource quota
                            renaming
                 Review:    AA

RD-2006-11-17-0: Cleanup:   renamed limitation rule sets to resource quota sets
                 Review:    AA

CR-2006-11-16-0: Bugfix:    - fixed error in thight_integration check when
                              unexpected output from login scripts is printed
                 Review:    RD

RD-2006-11-16-0: Enhancem.: - enhanced clients/qlimit test
                            - fixed scheduler/resource_quota test
                            - disabled warnings in scheduler/tickets test
                 Review:    JG 

HP-2006-11-15-0: Bugfix:    Renamed file backslash_space_queue19. to
                            backslash_space_queue19

RD-2006-11-10-0: Enhancem.: Enhanced tests for limitation rule sets
                            - added new test
                              system_tests/scheduler/resource_quota
                            - added Xattr test in clients/qconf
                            - added lirs runlevel in qmaster/complex

JG-2006-11-10-0: Bugfix:    fixed system_tests/scheduler/reconnect for maintrunk
                            clusters (get_qconf_list now returns empty list in 
                            case of qconf error).
                 Review:    RD

JG-2006-11-09-0: Enhancem.: Allow testing of NetBSD systems.
                            Cleanup.
                 Review:    RD

JG-2006-11-08-0: Enhancem.: new check system_tests/scheduler/reconnect.
                 Review:    AH

JG-2006-11-06-0: Bugfix:    issue_1330 check removed spooling database during
                            execd installation, when local bdb spooling was 
                            configured. This caused subsequent tests to fail.
                 Review:    RD
